Continue following the contoso univ tutorial

--- a/SheetManager.Web/Views/Books/Create.cshtml
+++ b/SheetManager.Web/Views/Books/Create.cshtml
@@ -1,36 +1,48 @@
-﻿@model SheetManager.Web.Models.Book
+﻿@using SheetManager.Web.Controllers
+@model SheetManager.Web.Models.Book
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = nameof(BooksController.Create);
 }
 
-<h2>Create</h2>
+<h2>@nameof(BooksController.Create)</h2>
 
 <h4>Book</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Create">
+        <form asp-action="@nameof(BooksController.Create)">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+	        <div class="form-group">
+		        <label asp-for="Name" class="control-label"></label>
+		        <input asp-for="Name" class="form-control" />
+		        <span asp-validation-for="Name" class="text-danger"></span>
+	        </div>
+	        <div class="form-group">
+		        <label asp-for="Genre" class="control-label"></label>
+		        <input asp-for="Genre" class="form-control" />
+		        <span asp-validation-for="Genre" class="text-danger"></span>
+	        </div>
+	        <div class="form-group">
+		        <label asp-for="Path" class="control-label"></label>
+		        <input asp-for="Path" class="form-control" />
+		        <span asp-validation-for="Path" class="text-danger"></span>
+	        </div>
+			<div class="checkbox">
+				<label><input asp-for="IsArrangement" type="checkbox" /> Arrangement</label>
+			</div>
+			<div class="checkbox">
+				<label><input asp-for="IsCompilation" type="checkbox" /> Compilation</label>
+			</div>
             <div class="form-group">
-                <label asp-for="Path" class="control-label"></label>
-                <input asp-for="Path" class="form-control" />
-                <span asp-validation-for="Path" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Name" class="control-label"></label>
-                <input asp-for="Name" class="form-control" />
-                <span asp-validation-for="Name" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-default" />
+                <input type="submit" value="@nameof(BooksController.Create)" class="btn btn-default" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="@nameof(BooksController.Index)">Back to List</a>
 </div>
 
 @section Scripts {
