--- a/SheetManager.Web/Views/Books/Delete.cshtml
+++ b/SheetManager.Web/Views/Books/Delete.cshtml
@@ -1,10 +1,11 @@
-﻿@model SheetManager.Web.Models.Book
+﻿@using SheetManager.Web.Controllers
+@model SheetManager.Web.Models.Book
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = nameof(BooksController.Delete);
 }
 
-<h2>Delete</h2>
+<h2>@nameof(BooksController.Delete)</h2>
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
@@ -25,9 +26,9 @@
         </dd>
     </dl>
     
-    <form asp-action="Delete">
+    <form asp-action="@nameof(BooksController.Delete)">
         <input type="hidden" asp-for="ID" />
-        <input type="submit" value="Delete" class="btn btn-default" /> |
-        <a asp-action="Index">Back to List</a>
+        <input type="submit" value="@nameof(BooksController.Delete)" class="btn btn-default" /> |
+        <a asp-action="@nameof(BooksController.Index)">Back to List</a>
     </form>
 </div>
